fixed support us layout width on small screens

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -46,7 +46,6 @@ app-blocksize {
     margin: $margin-large;
 
     &.page-card {
-        padding: $margin-huge;
         width: 100%;
         margin: 0;
 
@@ -63,9 +62,15 @@ app-blocksize {
         }
 
         @media only screen and (min-width: $max-content-width) {
+          padding: $margin-large;
+
           > h2, > h3 {
             margin-bottom: $margin-huge;
           }
+        }
+        
+        @media only screen and (min-width: $small-screen-width) {
+          padding: $margin-huge;
         }
     }
 
